[package]
name = "peeky"
version = "0.1.0"
edition = "2024"
authors = ["dmyTRUEk"]
description = "Simple image viewer with vim-motions."

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
image = "0.25.9"
minifb = { version = "0.28.0", default-features = false, features = ["wayland"] }
